# deepfake-detection-basic-project

./: .gitignore  README.md  pyproject.toml
deepfake_detection/: app.py
