[tool.poetry]
name = "deepfake-detection"
version = "0.1.0"
description = ""
authors = ["ViratCh04 <105713825+ViratCh04@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
face-recognition = "^1.3.0"
opencv-python = "^4.10.0.84"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
